[package]
authors = ["zuisong <378818573@qq.com>"]
default-run = "chen_lang"
edition = "2024"
name = "chen_lang"
version = "0.1.0"
description = "A tiny programming language written in rust"
rust-version = "1.90"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
binaries = ["dep:clap", "dep:clap_complete", "dep:tracing-subscriber"]
wasm = ["dep:wasm-bindgen"]
pest-parser = ["dep:pest", "dep:pest_derive"]
default = ["binaries", "wasm"]

[dependencies]
thiserror = "2"
winnow = "0.7"
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
clap = { version = "4", optional = true, default-features = false, features = ["derive", "help", "suggestions"] }
clap_complete = { version = "4", optional = true }
pest = { version = "2.8.4", optional = true }
pest_derive = { version = "2.8.4", optional = true }
indexmap = "2.12.1"
jiff = { version = "0.2", features = ["js"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = { version = "1.0.100" }
codespan-reporting = { version = "0.13.1",default-features = false , features = ["std"]}
rust_decimal = { version = "1.39.0", features = ["serde-float", "macros"] }

[dev-dependencies]
assert_cmd = "2"
escargot = "0.5"
pretty_assertions = { version = "1", features = ["unstable"] }
tempfile = "3"


#[profile.release]
#strip = true      # Automatically strip symbols from the binary.
#opt-level = "z"   # Optimize for size.
#lto = true
#codegen-units = 1
#panic = "abort"
