[package]
authors = ["zuisong <378818573@qq.com>"]
default-run = "chen_lang"
edition = "2024"
name = "chen_lang"
version = "0.1.0"
description = "A tiny programming language written in rust"
rust-version = "1.90"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
binaries = ["dep:clap", "dep:clap_complete", "dep:tracing-subscriber"]
wasm = ["dep:wasm-bindgen"]
pest-parser = ["dep:pest", "dep:pest_derive"]
http = ["dep:reqwest"]  # HTTP 客户端（支持 WASM）
default = ["binaries", "wasm", "winnow-tokenizer", "http"]
winnow-tokenizer = ["dep:winnow"]



[dependencies]
thiserror = "2"
winnow = { version = "0.7",optional = true }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
clap = { version = "4", optional = true, default-features = false, features = ["derive", "help", "suggestions"] }
clap_complete = { version = "4", optional = true }
pest = { version = "2.8.4", optional = true }
pest_derive = { version = "2.8.4", optional = true }
indexmap = "2.12.1"
jiff = { version = "0.2", features = ["js"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = { version = "1.0.100" }
codespan-reporting = { version = "0.13.1",default-features = false , features = ["std"]}
rust_decimal = { version = "1.39.0", features = ["serde-float", "macros"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"], optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.12", features = ["json"], optional = true }

[dev-dependencies]
assert_cmd = "2"
mockito = "1.7.1"
pretty_assertions = { version = "1", features = ["unstable"] }
tempfile = "3"


#[profile.release]
#strip = true      # Automatically strip symbols from the binary.
#opt-level = "z"   # Optimize for size.
#lto = true
#codegen-units = 1
#panic = "abort"
