[package]
name = "chen_lang"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
description = "A tiny programming language written in rust"
default-run = "chen_lang"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
binaries = ["dep:clap", "dep:clap_complete", "dep:tracing-subscriber"]
wasm = ["dep:wasm-bindgen", "dep:wasm-bindgen-futures"]
pest-parser = ["dep:pest", "dep:pest_derive"]
http = ["dep:reqwest"]  # HTTP 客户端（支持 WASM）
winnow-tokenizer = ["dep:winnow"]
default = ["binaries", "wasm", "winnow-tokenizer", "http"]

[dependencies]
thiserror = "2"
winnow = { version = "0.7", optional = true }
tracing = { version = "0.1" }
tracing-subscriber = { version = "0.3", optional = true }
wasm-bindgen = { version = "0.2", optional = true }
wasm-bindgen-futures = { version = "0.4", optional = true }
clap = { version = "4", optional = true, default-features = false, features = ["derive", "help", "suggestions"] }
clap_complete = { version = "4", optional = true }
pest = { version = "2.8.4", optional = true }
pest_derive = { version = "2.8.4", optional = true }
indexmap = "2.12.1"
jiff = { version = "0.2", features = ["js"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = { version = "1.0.100" }
codespan-reporting = { version = "0.13.1", default-features = false, features = ["std"] }
rust_decimal = { version = "1.39.0", features = ["serde-float", "macros"] }
reqwest = { version = "0.13", features = ["json"], optional = true }
tokio = { version = "1.48.0", default-features = false, features = ["sync", "macros", "rt", "time", "io-util"] }

[dev-dependencies]
pretty_assertions = { version = "1", features = ["unstable"] }
assert_cmd = "2"
mockito = "1.7.1"
tempfile = "3"

#[profile.release]
#strip = true      # Automatically strip symbols from the binary.
#opt-level = "z"   # Optimize for size.
#lto = true
#codegen-units = 1
#panic = "abort"

[workspace]
resolver = "3"
members = ["lsp"]
